tests/snapshots/parse_standard__snapshot_timeseries_with_facet.snap
---
source: tests/parse_standard.rs
assertion_line: 134
expression: ast
---
Standard:
  selections:
    - Aggregation:
        function: Avg
        args:
          - Field: duration
  data_source: Traces
  scope: ~
  conditions: ~
  facet:
    dimension: action_name
  time_range:
    Since:
      Relative:
        amount: 1
        unit: hour
  time_basis: ~
  order_by: ~
  limit: ~
  offset: ~
  output_format: ~
  baseline: ~
  timeseries:
    interval:
      raw_value: 1
      unit: min
      si_value: 60
      si_unit: s
  enrichments: []
  during: ~
