tests/snapshots/parse_standard__snapshot_topic_alias.snap
---
source: tests/parse_standard.rs
expression: ast
---
Standard:
  selections:
    - Star
  data_source:
    TopicAlias: Odom
  robot_scope: ~
  conditions: ~
  facet: ~
  time_range:
    Since:
      Relative:
        amount: 10
        unit: minutes
  time_basis: ~
  order_by: ~
  limit: ~
  output_format: ~
  baseline: ~
