tests/snapshots/parse_standard__snapshot_where_in.snap
---
source: tests/parse_standard.rs
expression: ast
---
Standard:
  selections:
    - Star
  data_source: Logs
  robot_scope: ~
  conditions:
    In:
      expr:
        Field: severity
      values:
        - Literal:
            String: ERROR
        - Literal:
            String: WARN
  facet: ~
  time_range: ~
  time_basis: ~
  order_by: ~
  limit: ~
  offset: ~
  output_format: ~
  baseline: ~
