tests/snapshots/parse_standard__snapshot_within_local.snap
---
source: tests/parse_standard.rs
expression: ast
---
Standard:
  selections:
    - Star
  data_source:
    TopicAlias: Odom
  scope: ~
  conditions:
    Within:
      field:
        Field: position
      radius:
        raw_value: 2
        unit: m
        si_value: 2
        si_unit: m
      center:
        Local:
          - 1.5
          - 3
  facet: ~
  time_range:
    Since:
      Relative:
        amount: 1
        unit: hour
  time_basis: ~
  order_by: ~
  limit: ~
  offset: ~
  output_format: ~
  baseline: ~
  timeseries: ~
  enrichments: []
